# Contexta

./: .env.example  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  Cargo.toml  LICENSE  README.md  TECHNICAL.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  fly.toml  package.json  tsconfig.json
apps/api/src/: app.ts  container.ts  env.ts  index.ts
apps/api/src/db/: repository.ts
apps/api/src/http/: context.ts  schemas.ts
apps/api/src/http/middleware/: auth.ts  error.ts  rbac.ts
apps/api/src/http/routes/: agent.ts  audit.ts  auth.ts  health.ts  integrations.ts  legal.ts  payroll.ts  public.ts  treasury.ts
apps/api/src/integrations/: ai.ts  anchor.ts  blend.ts  defindex.ts  oracle.ts  reflector.ts  soroban.ts
apps/api/src/services/: agentService.ts  auditService.ts  legalContextService.ts  payrollService.ts  treasuryService.ts  walletAuthService.ts
apps/api/test/: agent.test.ts  fakeContainer.ts  http.test.ts  integrations.test.ts  setup.ts
apps/web/: README.md  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: flows.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/agent/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/integrations/: page.tsx
apps/web/src/app/legal-context/: page.tsx
apps/web/src/app/payroll/: page.tsx
apps/web/src/app/security/: page.tsx
apps/web/src/app/treasury/: page.tsx
apps/web/src/components/: AiSelector.tsx  ArchitectureDiagram.tsx  AuthControls.tsx  DisputeChannel.tsx  Footer.tsx  Hero3D.tsx  LanguageSelector.tsx  LiveAgentFeed.tsx  Navbar.tsx  OnchainProof.tsx  Reveal.tsx  TreasuryControls.tsx  ui.tsx
apps/web/src/lib/: aiModel.ts  api.ts  auth.tsx  demoData.ts  format.ts  i18n.tsx  supabase.ts  useLiveData.ts  vaults.ts  wallet.ts
apps/worker/: .dockerignore  Dockerfile  README.md  fly.toml  package.json
apps/worker/src/: apiClient.ts  env.ts  index.ts  scheduler.test.ts  scheduler.ts
apps/worker/src/jobs/: agentRebalance.ts  blendYield.ts  defindexYield.ts  refreshMarketData.ts  scheduledPayroll.ts
contracts/: README.md
contracts/payroll/: Cargo.toml
contracts/payroll/src/: lib.rs  test.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md  SCF-INTEGRATION.md  customer-discovery.md
supabase/: README.md  config.toml  full_setup.sql  seed.sql
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_wallet_auth.sql  0004_agent_toggle.sql
(+6 files in other folders)
