# Cargo workspace for Contexta Soroban contracts.
# pnpm manages the TS/JS packages; this manages the Rust/Soroban side.
[workspace]
resolver = "2"
members = ["contracts/treasury", "contracts/payroll"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Contexta"]
repository = "https://github.com/contexta/contexta"

[workspace.dependencies]
soroban-sdk = "22.0.0"

# Release profile tuned for small WASM (64KB contract limit).
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Faster local test builds.
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
